# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build color_manager_config.a {{{
config("color_manager_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wno-unused-variable",
    "-Wno-unused-private-field",
    "-Wno-implicit-fallthrough",
    "-Wno-reorder-ctor",
    "-Wno-sign-compare",
  ]
}

config("color_manager_public_config") {
  include_dirs = [ "export" ]
}

ohos_static_library("color_manager") {
  sources = [
    "src/color.cpp",
    "src/color_space.cpp",
    "src/color_space_convertor.cpp",
  ]

  configs = [ ":color_manager_config" ]

  public_configs = [ ":color_manager_public_config" ]

  deps = []
  subsystem_name = "graphic"
  part_name = "graphic_standard"
}

## Build color_manager_config.a }}}

