# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build cpudraw.a {{{
config("cpudraw_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("cpudraw_public_config") {
  include_dirs = [ "export" ]
}

ohos_static_library("cpudraw") {
  sources = [ "src/cpudraw.cpp" ]

  configs = [ ":cpudraw_config" ]

  public_configs = [ ":cpudraw_public_config" ]

  deps = [ "..:scoped_bytrace" ]
  subsystem_name = "graphic"
  part_name = "graphic_standard"
}
## Build cpudraw.a }}}
