# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build libgslogger.so {{{
config("libgslogger_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("libgslogger_public_config") {
  include_dirs = [ "export" ]
}

ohos_shared_library("libgslogger") {
  sources = [ "src/gslogger.cpp" ]

  configs = [ ":libgslogger_config" ]

  public_configs = [ ":libgslogger_public_config" ]

  public_deps =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
## Build libgslogger.so }}}
