# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/standard/graphic_config.gni")

## Build 2d_graphics.so
ohos_shared_library("2d_graphics") {
  symlink_target_name = [ "libnative_graphics.so" ]

  sources = [
    "src/c/drawing_bitmap.cpp",
    "src/c/drawing_brush.cpp",
    "src/c/drawing_canvas.cpp",
    "src/c/drawing_path.cpp",
    "src/c/drawing_pen.cpp",
    "src/draw/brush.cpp",
    "src/draw/color.cpp",
    "src/draw/core_canvas.cpp",
    "src/draw/path.cpp",
    "src/draw/pen.cpp",
    "src/effect/color_filter.cpp",
    "src/effect/color_space.cpp",
    "src/effect/filter.cpp",
    "src/effect/image_filter.cpp",
    "src/effect/mask_filter.cpp",
    "src/effect/path_effect.cpp",
    "src/effect/shader_effect.cpp",
    "src/engine_adapter/impl_factory.cpp",
    "src/engine_adapter/skia_adapter/skia_bitmap.cpp",
    "src/engine_adapter/skia_adapter/skia_camera.cpp",
    "src/engine_adapter/skia_adapter/skia_canvas.cpp",
    "src/engine_adapter/skia_adapter/skia_color_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_color_space.cpp",
    "src/engine_adapter/skia_adapter/skia_image.cpp",
    "src/engine_adapter/skia_adapter/skia_image_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_impl_factory.cpp",
    "src/engine_adapter/skia_adapter/skia_mask_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_matrix.cpp",
    "src/engine_adapter/skia_adapter/skia_paint.cpp",
    "src/engine_adapter/skia_adapter/skia_path.cpp",
    "src/engine_adapter/skia_adapter/skia_path_effect.cpp",
    "src/engine_adapter/skia_adapter/skia_picture.cpp",
    "src/engine_adapter/skia_adapter/skia_shader_effect.cpp",
    "src/image/bitmap.cpp",
    "src/image/image.cpp",
    "src/image/picture.cpp",
    "src/text/text.cpp",
    "src/utils/camera3d.cpp",
    "src/utils/matrix.cpp",
  ]

  include_dirs = [
    "include",
    "src",
    "src/engine_adapter",
  ]

  defines = [ "USE_ACE_SKIA" ]

  deps = [
    "//foundation/ace/ace_engine/build/external_config/flutter/skia:ace_skia_ohos",
    "//foundation/graphic/standard:libsurface",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "multimedia_image_standard:image_native",
    "utils_base:utils",
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Build 2d_graphics.so
ohos_shared_library("2d_graphics_canvaskit0310") {
  sources = [
    "src/draw/brush.cpp",
    "src/draw/color.cpp",
    "src/draw/core_canvas.cpp",
    "src/draw/path.cpp",
    "src/draw/pen.cpp",
    "src/effect/color_filter.cpp",
    "src/effect/color_space.cpp",
    "src/effect/filter.cpp",
    "src/effect/image_filter.cpp",
    "src/effect/mask_filter.cpp",
    "src/effect/path_effect.cpp",
    "src/effect/shader_effect.cpp",
    "src/engine_adapter/impl_factory.cpp",
    "src/engine_adapter/skia_adapter/skia_bitmap.cpp",
    "src/engine_adapter/skia_adapter/skia_camera.cpp",
    "src/engine_adapter/skia_adapter/skia_canvas.cpp",
    "src/engine_adapter/skia_adapter/skia_color_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_color_space.cpp",
    "src/engine_adapter/skia_adapter/skia_image.cpp",
    "src/engine_adapter/skia_adapter/skia_image_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_impl_factory.cpp",
    "src/engine_adapter/skia_adapter/skia_mask_filter.cpp",
    "src/engine_adapter/skia_adapter/skia_matrix.cpp",
    "src/engine_adapter/skia_adapter/skia_paint.cpp",
    "src/engine_adapter/skia_adapter/skia_path.cpp",
    "src/engine_adapter/skia_adapter/skia_path_effect.cpp",
    "src/engine_adapter/skia_adapter/skia_picture.cpp",
    "src/engine_adapter/skia_adapter/skia_shader_effect.cpp",
    "src/image/bitmap.cpp",
    "src/image/image.cpp",
    "src/image/picture.cpp",
    "src/text/text.cpp",
    "src/utils/camera3d.cpp",
    "src/utils/matrix.cpp",
  ]

  defines = [ "USE_CANVASKIT0310_SKIA" ]

  include_dirs = [
    "include",
    "src",
    "src/engine_adapter",
  ]

  deps = [
    "//foundation/graphic/standard:libsurface",
    # "//third_party/skia_canvaskit0310:skia",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "multimedia_image_standard:image_native",
    "utils_base:utils",
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
## Build 2d_graphics.so
