# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

enable_debug = true

rosen_is_ohos = current_os == "ohos"
rosen_is_android = current_os == "android"
rosen_is_ios = current_os == "ios" || current_os == "tvos"
rosen_is_mac = current_os == "mac"
rosen_is_win = current_os == "win" || current_os == "mingw"
rosen_is_linux = current_os == "linux"

rs_common_define = []

if (rosen_is_ohos) {
  rs_common_define += [ "ROSEN_OHOS" ]
}

if (rosen_is_android) {
  rs_common_define += [ "ROSEN_ANDROID" ]
}

if (rosen_is_ios) {
  rs_common_define += [ "ROSEN_IOS" ]
}

if (rosen_is_mac) {
  rs_common_define += [ "ROSEN_MAC" ]
}

if (rosen_is_win) {
  rs_common_define += [ "ROSEN_WIN" ]
}

if (rosen_is_linux) {
  rs_common_define += [ "ROSEN_LINUX" ]
}
